--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,19 @@
 # Base configs
-baseurl: "https://photography.rampatra.com"
+baseurl: "/photography"
 #baseurl: "" # Comment the above line and uncomment this to test the website locally
 image_fulls_loc: "/images/fulls"
 image_thumbs_loc: "/images/thumbs"
 google_analytics: "UA-46465113-2"
 
 # UI configs
-title: "Photography by Ram Patra"
+title: "Photography by Cojocaru Claudiu"
 subtitle: "See the world through my eyes!"
-author: "Ram Patra"
+author: "Cojocaru Claudiu"
 header:
  title: "Photography"
- subtitle: "by Ram Patra"
+ subtitle: "by Cojocaru Claudiu"
 footer:
- name: "Hey there, my name is Ram"
+ name: "Hey there, my name is Cojocaru Claudiu"
  bio: "I am a developer and a tech aficionado from India. Love making teeny tiny apps solving tiny problems in life and now learning photography."
  github: "Want a website like this for yourself for free? Just <a href=\"https://github.com/ramswaroop/photography\">fork this repo on github</a> ;)"
 web_design: "AJ"
@@ -21,8 +21,8 @@ web_design: "AJ"
 # Tag is the actual exif tag, icon is a fontawesome icon. Use JSON notation without line breaks
 exif: '[{"tag": "Model", "icon": "camera-retro"}, {"tag": "FNumber", "icon": "dot-circle-o"}, {"tag": "ExposureTime", "icon": "clock-o"}, {"tag": "ISOSpeedRatings", "icon": "info-circle"}]'
 social_urls:
-  twitter: "https://www.twitter.com/ram__patra"
-  instagram: "https://www.instagram.com/ram_patra"
-  dribbble: "https://dribbble.com/rampatra"
-  linkedin: "https://in.linkedin.com/in/ram-patra"
-  github: "https://www.github.com/rampatra"
+  twitter: "https://www.twitter.com/"
+  instagram: "https://www.instagram.com/klau_121"
+  dribbble: "https://dribbble.com/"
+  linkedin: "https://www.linkedin.com/in/claudiu-cojocaru"
+  github: "https://www.github.com/CojocaruClaudiu"
