--- a/_config.yml
+++ b/_config.yml
@@ -6,17 +6,15 @@ image_thumbs_loc: "/images/thumbs"
 google_analytics: "UA-46465113-2"
 
 # UI configs
-title: "Photography by Cojocaru Claudiu"
+title: "Photography by Klau"
 subtitle: "See the world through my eyes!"
-author: "Cojocaru Claudiu"
+author: "Klau"
 header:
  title: "Photography"
- subtitle: "by Cojocaru Claudiu"
+ subtitle: "by Klau"
 footer:
- name: "Hey there, my name is Cojocaru Claudiu"
- bio: "I am a developer and a tech aficionado from India. Love making teeny tiny apps solving tiny problems in life and now learning photography."
- github: "Want a website like this for yourself for free? Just <a href=\"https://github.com/ramswaroop/photography\">fork this repo on github</a> ;)"
-web_design: "AJ"
+ name: "Hey there, my name is Klau"
+ bio: "I am a programmer from Romania. With a passion for photography and videography."
 # Configure which exif data to display
 # Tag is the actual exif tag, icon is a fontawesome icon. Use JSON notation without line breaks
 exif: '[{"tag": "Model", "icon": "camera-retro"}, {"tag": "FNumber", "icon": "dot-circle-o"}, {"tag": "ExposureTime", "icon": "clock-o"}, {"tag": "ISOSpeedRatings", "icon": "info-circle"}]'
